[metadata]
name = Nmap_API
version = 0.1.1
author = Chiranjeevi G
author_email = morpheuslord@protonmail.com
description = Nmap API vuln analysis with python and ChatGPT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/morpheuslord/Nmap-API
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
